@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <lint>
+    <!-- Change the severity of hardcoded strings to "error" -->
+    <issue id="HardcodedText" severity="error" />
 </lint>
